--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
         <section id="section-one">
             <div class="container">
-                <div class="left-column">
-                    <div class="special-report">
+                <div class="content-box">
+                    <div class="special-article">
                         <article class="report-item">
                             <a href="">
                                 <figure>
@@ -184,17 +184,13 @@
                                 </figure>
                                 <div class="special-content">
                                     <h3 class="special-heading">বিশেষ প্রতিবেদন: বাংলাদেশের অর্থনীতি ও উন্নয়ন</h3>
-                                    <p class="special-description">বাংলাদেশের অর্থনীতি গত দশকে উল্লেখযোগ্য উন্নতি করেছে।
-                                        এই
-                                        প্রতিবেদনটি দেশের অর্থনৈতিক প্রবৃদ্ধি, বিনিয়োগ ও কর্মসংস্থান নিয়ে বিস্তারিত
-                                        আলোচনা
-                                        করবে। এবং বাংলাদেশের উন্নয়ন প্রতিবেদন প্রকাশ করবে</p>
+                                    <p class="special-description">বাংলাদেশের অর্থনীতি ও উন্নয়ন নিয়ে বিস্তারিত প্রতিবেদন। বাংলাদেশের অর্থনীতি ও উন্নয়ন নিয়ে বিস্তারিত প্রতিবেদন। </p>
                                 </div>
                             </a>
                         </article>
                     </div>
-                    <div class="lead-report">
-                        <article class="report-item">
+                    <div class="lead-articles">
+                        <article class="lead-article">
                             <figure>
                                 <img src="https://placehold.co/600x400" alt="Lead Report" class="img-fluid" />
                             </figure>
@@ -209,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="right-column">
+                <div class="sidebar">
                     <div class="ads-box">
                         <div class="ads">
                             <img src="images/ads-02.png" alt="Advertisement" class="img-fluid" />
@@ -299,9 +295,14 @@
             </div>
         </section>
 
+
+
+
+
+
         <section id="section-two">
             <div class="container">
-                <div class="left-column">
+                <div class="content-box">
                     <div class="article-box">
                         <div class="lead-articles">
                             <article class="article-item">
@@ -309,7 +310,7 @@
                                     <figure>
                                         <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
                                     </figure>
-                                    <h3 class="heading-1">বাংলাদেশের প্রধানমন্ত্রী আজ জাতির উদ্দেশ্যে ভাষণ দেবেন।</h3>
+                                    <h3 class="lead-heading">বাংলাদেশের প্রধানমন্ত্রী আজ জাতির উদ্দেশ্যে ভাষণ দেবেন।</h3>
                                 </a>
                             </article>
                             <article class="article-item">
@@ -317,7 +318,7 @@
                                     <figure>
                                         <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
                                     </figure>
-                                    <h3 class="heading-1">ঢাকায় আজ অনুষ্ঠিত হবে আন্তর্জাতিক সম্মেলন।</h3>
+                                    <h3 class="lead-heading">ঢাকায় আজ অনুষ্ঠিত হবে আন্তর্জাতিক সম্মেলন।</h3>
                                 </a>
                             </article>
                             <article class="article-item">
@@ -325,7 +326,7 @@
                                     <figure>
                                         <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
                                     </figure>
-                                    <h3 class="heading-1">বাংলাদেশের ক্রিকেট দল আজ নতুন কোচের সাথে অনুশীলন শুরু করবে।</h3>
+                                    <h3 class="lead-heading">বাংলাদেশের ক্রিকেট দল আজ নতুন কোচের সাথে অনুশীলন শুরু করবে।</h3>
                                 </a>
                             </article>
                             <article class="article-item">
@@ -333,7 +334,7 @@
                                     <figure>
                                         <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
                                     </figure>
-                                    <h3 class="heading-1">দেশের বিভিন্ন স্থানে বৃষ্টির পূর্বাভাস রয়েছে।</h3>
+                                    <h3 class="lead-heading">দেশের বিভিন্ন স্থানে বৃষ্টির পূর্বাভাস রয়েছে।</h3>
                                 </a>
                             </article>
                         </div>
@@ -379,20 +380,18 @@
                                     <h4 class="heading-1">বাংলাদেশের অর্থনীতি নিয়ে বিশেষ প্রতিবেদন প্রকাশিত হয়েছে।</h4>
                                 </a>
                             </article>
-                            <article class="list-item">
-                                <a href="">
-                                    <figure>
-                                        <img src="https://placehold.co/600x400" alt="List Article" class="img-fluid" />
-                                    </figure>
-                                    <h4 class="heading-1">বাংলাদেশের অর্থনীতি নিয়ে বিশেষ প্রতিবেদন প্রকাশিত হয়েছে।</h4>
-                                </a>
-                            </article>
+                            
+                            <div class="ads-box">
+                                <div class="ads">
+                                    <img src="images/ads-02.png" alt="Advertisement" class="img-fluid" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Right Sidebar -->
-                <div class="right-column">
+                <div class="sidebar">
                     <div class="ads-box">
                         <div class="ads-2">
                             <img src="images/ads-02.png" alt="Advertisement" class="img-fluid" />
