--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <section id="section-one">
             <div class="container">
-                <div class="content-box">
+                <div class="content-box d-flex">
                     <div class="special-article">
                         <article class="report-item">
                             <a href="">
@@ -295,14 +295,14 @@
             </div>
         </section>
 
-
-
-
-
-
         <section id="section-two">
             <div class="container">
                 <div class="content-box">
+                    <div class="category-title">
+                        <h2>জাতীয় সংবাদ</h2>
+                        <a href=""> আরও পড়ুন...</a>
+                    </div>
+                    
                     <div class="article-box">
                         <div class="lead-articles">
                             <article class="article-item">
@@ -382,7 +382,7 @@
                             </article>
                             
                             <div class="ads-box">
-                                <div class="ads">
+                                <div class="ads-3">
                                     <img src="images/ads-02.png" alt="Advertisement" class="img-fluid" />
                                 </div>
                             </div>
