--- a/index.html
+++ b/index.html
@@ -528,6 +528,51 @@
                 </div>
             </div>
         </section>
+
+        <section id="section-three">
+            <div class="container">
+                <div class="category-style-2">
+                    <div class="category-title">
+                        <h2>জাতীয় সংবাদ</h2>
+                        <a href=""> আরও পড়ুন...</a>
+                    </div>
+                    <div class="category-grid">
+                        <article class="category-item">
+                            <a href="#">
+                                <figure>
+                                    <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
+                                </figure>
+                                <h3 class="lead-heading">বাংলাদেশের প্রধানমন্ত্রী আজ জাতির উদ্দেশ্যে ভাষণ দেবেন।</h3>
+                            </a>
+                        </article>
+                        <article class="category-item">
+                            <a href="#">
+                                <figure>
+                                    <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
+                                </figure>
+                                <h3 class="lead-heading">ঢাকায় আজ অনুষ্ঠিত হবে আন্তর্জাতিক সম্মেলন।</h3>
+                            </a>
+                        </article>
+                        <article class="category-item">
+                            <a href="#">
+                                <figure>
+                                    <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
+                                </figure>
+                                <h3 class="lead-heading">বাংলাদেশের ক্রিকেট দল আজ নতুন কোচের সাথে অনুশীলন শুরু করবে।</h3>
+                            </a>
+                        </article>
+                        <article class="category-item">
+                            <a href="#">
+                                <figure>
+                                    <img src="https://placehold.co/600x400" alt="Lead Article" class="img-fluid" />
+                                </figure>
+                                <h3 class="lead-heading">দেশের বিভিন্ন স্থানে বৃষ্টির পূর্বাভাস রয়েছে।</h3>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
